Serve local repo contributions from backend
Currently, this is only useful to private applications since it mixes
the local contributions with GitHub contributions regardless of who the
user is.
